--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -104,7 +104,7 @@ $background-color_3: #009efb;
 $background-color_4: #55ce63;
 $background-color_5: #ffbc34;
 $background-color_6: #f62d51;
-$background-color_7: #2e37a4;
+$background-color_7: #442670;
 $background-color_8: #00d3c7;
 $background-color_9: #028ee1;
 $background-color_10: #e6294b;
