--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1,6 +1,6 @@
 $color_1: #333448;
 $color_2: #009ce7;
-$color_3: #2e37a4;
+$color_3: #442670;
 $color_4: #000;
 $color_5: #757575;
 $color_6: #009efb;
@@ -1697,16 +1697,25 @@ table.table {
 }
 
 .logo {
-  align-items: center;
   display: flex;
-  height: 70px;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: center;
+  max-height: 70px;
+  max-width: 180px;
+  overflow: hidden;
+
+  img {
+    height: 50%;
+    width: 50%;
+    object-fit: contain;
+  }
 
   span {
     color: $color_3;
     font-size: 20px;
     font-weight: 500;
-    margin-left: 10px;
+    align-self: flex-end;
+    white-space: nowrap;
   }
 }
 
