--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1700,7 +1700,7 @@ table.table {
   display: flex;
   align-items: center;
   justify-content: center;
-  max-height: 70px;
+  height: 70px;
   max-width: 180px;
   overflow: hidden;
 
@@ -1714,7 +1714,6 @@ table.table {
     color: $color_3;
     font-size: 20px;
     font-weight: 500;
-    align-self: flex-end;
     white-space: nowrap;
   }
 }
