--- a/src/app/medical/patient-m/add-patient-m/add-patient-m.component.html
+++ b/src/app/medical/patient-m/add-patient-m/add-patient-m.component.html
@@ -17,156 +17,8 @@
     <div class="row">
       <div class="col-sm-12">
 
-        <div class="card">
-          <div class="card-body">
-            <form>
-              <div class="row">
-                <div class="col-12">
-                  <div class="form-heading">
-                    <h4>Datos personales</h4>
-                  </div>
-                </div>
+        <app-patient-form (sendPatientData)="createNewPatient($event)"></app-patient-form>
 
-                <div class="col-12 col-md-6 col-xl-6">
-                  <div class="form-group local-forms">
-                    <label>N° Documento <span class="login-danger">*</span></label>
-                    <input class="form-control" type="text" placeholder="DNI">
-                  </div>
-                </div>
-
-                <div class="col-12 col-md-6 col-xl-6">
-                  <div class="form-group local-forms">
-                    <label>Nombres <span class="login-danger">*</span></label>
-                    <input class="form-control" type="text">
-                  </div>
-                </div>
-
-                <div class="col-12 col-md-6 col-xl-6">
-                  <div class="form-group local-forms">
-                    <label>Apellidos <span class="login-danger">*</span></label>
-                    <input class="form-control" type="text">
-                  </div>
-                </div>
-
-                <div class="col-12 col-md-6 col-xl-6">
-                  <div class="form-group local-forms">
-                    <label>Email</label>
-                    <input class="form-control" [(ngModel)]="email" name="email" type="email">
-                  </div>
-                </div>
-
-                <div class="col-12 col-md-6 col-xl-6">
-                  <div class="form-group local-forms">
-                    <label>Fecha de nacimiento</label>
-                    <input class="form-control datetimepicker" type="text" [matDatepicker]="picker">
-                    <mat-datepicker #picker></mat-datepicker>
-                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                  </div>
-                </div>
-
-                <div class="col-12 col-md-6 col-xl-6">
-                  <div class="form-group local-forms">
-                    <label>Celular o telefono</label>
-                    <input class="form-control" type="text">
-                  </div>
-                </div>
-
-                <div class="col-12 col-md-6 col-xl-6">
-                  <div class="form-group local-forms">
-                    <label>Segundo celular</label>
-                    <input class="form-control" type="text">
-                  </div>
-                </div>
-
-                <div class="col-12 col-md-6 col-xl-6">
-                  <div class="form-group select-gender">
-                    <label class="gen-label">Sexo:</label>
-                    <div class="form-check-inline">
-                      <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="gender" value="masculino">
-                        Masculino
-                      </label>
-                    </div>
-                    <div class="form-check-inline">
-                      <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="gender" value="femenino">
-                        Femenino
-                      </label>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-12">
-                  <div class="form-heading">
-                    <h4>Pre diagnóstico</h4>
-                  </div>
-                </div>
-
-                <div class="col-12">
-                  <div class="form-group local-forms">
-                    <label>Mensaje</label>
-                    <textarea class="form-control" rows="3" cols="30"></textarea>
-                  </div>
-                </div>
-
-                <div class="col-12 mb-2">
-                  <div class="checkbox">
-                    <label>
-                      <input type="checkbox"> ¿Cuentas con exámenes o algún análisis sobre tu consulta, que tenga menos
-                      de 30 días?
-                    </label>
-                  </div>
-                </div>
-
-                <div class="col-12 mb-2">
-                  <div class="checkbox">
-                    <label>
-                      <input type="checkbox"> ¿Está interesado en recibir apoyo espiritual?
-                    </label>
-                  </div>
-                </div>
-
-                <div class="col-12 mb-2">
-                  <div class="checkbox">
-                    <label>
-                      <input type="checkbox"> ¿Desea ser contactado para futuras actividades o eventos religiosos?
-                    </label>
-                  </div>
-                </div>
-
-                <div class="col-12">
-                  <div class="form-group row my-4" *ngIf="text_success">
-                    <div class="col-md-8">
-                      <div class="alert alert-success alert-dismissible fade show" role="alert">
-                        <strong>Exito!</strong> {{ text_success }}.
-                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
-                          <span aria-hidden="true"> </span>
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="form-group row my-4" *ngIf="text_validation">
-                    <div class="col-md-8">
-                      <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                        <strong>!</strong> {{ text_validation }}.
-                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
-                          <span aria-hidden="true"> </span>
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-12">
-                  <div class="doctor-submit text-end">
-                    <button type="button" (click)="save()" class="btn btn-primary submit-form me-2">Guardar</button>
-                  </div>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
       </div>
 
       <!--   <div class="col-sm-12">
