feat: change name of functions

--- a/src/app/medical/patient-m/edit-patient-m/edit-patient-m.component.html
+++ b/src/app/medical/patient-m/edit-patient-m/edit-patient-m.component.html
@@ -18,7 +18,7 @@
 
       <div class="col-sm-12">
 
-        <app-patient-form [patientData]="patient" (sendPatientData)="save($event)"></app-patient-form>
+        <app-patient-form [patientData]="patient" (sendPatientData)="updatePatient($event)"></app-patient-form>
 
       </div>
 
