--- a/src/app/medical/patient-m/list-patient-m/list-patient-m.component.html
+++ b/src/app/medical/patient-m/list-patient-m/list-patient-m.component.html
@@ -145,98 +145,29 @@
                     <ul class="pagination">
                       <li
                         class="page-item"
-                        [ngClass]="{
-                                          disabled: currentPage === 1
-                                        }"
-                      >
-                        <a
-                          (click)="getMoreData('previous')"
-                          class="page-link"
-                          href="javascript:void(0);"
-                          tabindex="-1"
-                        >Anterior</a
-                        >
+                        [class.disabled]="currentPage === 1">
+                        <a href="javascript:void(0)" (click)="changePage(currentPage - 1)">
+                          Anterior
+                        </a>
                       </li>
-
-                      <ng-container
-                        *ngFor="let item of pageNumberArray; let i = index"
-                      >
-                        <li
-                          class="page-item"
-                          [class.active]="item === currentPage"
-                          [ngClass]="
-                                            (pageNumberArray[currentPage - 2] > item &&
-                                              item !== 1 &&
-                                              pageNumberArray.length > 6) ||
-                                            (pageNumberArray[currentPage] < item &&
-                                              item !== 1 &&
-                                              pageNumberArray.length > 6 &&
-                                              pageNumberArray.length !== item)
-                                              ? 'hide-page-no'
-                                              : 'show-page-no'
-                                          "
-                        >
-                          <a
-                            (click)="moveToPage(item)"
-                            class="page-link"
-                            href="javascript:void(0);"
-                          >
-                            {{ item }}
-                          </a>
-                        </li>
-                        <li
-                          class="page-item"
-                          *ngIf="
-                                            i === 0 &&
-                                            pageNumberArray.length > 6 &&
-                                            currentPage > 2
-                                          "
-                          [hidden]="currentPage === 1"
-                          (click)="moveToPage(currentPage - 2)"
-                        >
-                          <a class="page-link" href="javascript:void(0);">
-                            ...
-                          </a>
-                        </li>
-                        <li
-                          *ngIf="
-                                            i === pageNumberArray.length - 2 &&
-                                            pageNumberArray.length > 6
-                                          "
-                          [hidden]="
-                                            currentPage >=
-                                              pageNumberArray[pageNumberArray.length - 2] ||
-                                            totalData <
-                                              serialNumberArray[serialNumberArray.length - 1]
-                                          "
-                          class="page-item"
-                          (click)="moveToPage(currentPage + 2)"
-                        >
-                          <a class="page-link" href="javascript:void(0);">
-                            ...
-                          </a>
-                        </li>
-                      </ng-container>
-
+                      <li class="page-item" *ngFor="let page of totalPagesArray">
+                        <a href="javascript:void(0)"
+                           [class.active]="page === currentPage"
+                           (click)="changePage(page)">
+                          {{ page }}
+                        </a>
+                      </li>
                       <li
                         class="page-item"
-                        [ngClass]="{
-                                          disabled:
-                                            currentPage ===
-                                              pageNumberArray[pageNumberArray.length - 1] ||
-                                              patientsList.length === 0
-                                        }"
-                      >
-                        <a
-                          (click)="getMoreData('next')"
-                          class="page-link"
-                          href="javascript:void(0);"
-                        >Next
+                        [class.disabled]="currentPage === totalPages">
+                        <a href="javascript:void(0)" (click)="changePage(currentPage + 1)">
+                          Siguiente
                         </a>
                       </li>
                     </ul>
                   </div>
                 </div>
+
               </div>
             </div>
           </div>
