feat: refactor carousel

--- a/src/app/core/components/carousel/carousel.component.html
+++ b/src/app/core/components/carousel/carousel.component.html
@@ -1,5 +1,9 @@
 <div class="relative w-full overflow-hidden" style="max-height: 100vh">
-
-  <img *ngIf="slides[currentIndex]" class="w-full h-full object-cover" [src]="slides[currentIndex].src" [alt]="slides[currentIndex].alt">
-
+  <img
+    *ngIf="slides[currentIndex]"
+    class="w-full h-full object-cover"
+    [src]="slides[currentIndex].src"
+    [alt]="slides[currentIndex].alt"
+  />
 </div>
+
