Cambios en modulos citas

--- a/src/app/medical/appointment-pay/list-appointment-pay/list-appointment-pay.component.html
+++ b/src/app/medical/appointment-pay/list-appointment-pay/list-appointment-pay.component.html
@@ -120,7 +120,7 @@
                                         <th mat-sort-header="email">Paciente</th>
                                         <th mat-sort-header="mobile">Fecha</th>
                                         <th mat-sort-header="birth_date">Hora</th>
-                                        <th mat-sort-header="n_document">Especialidad</th>
+                                        <th mat-sort-header="identification_number">Especialidad</th>
                                         <th mat-sort-header="state">Status Pay</th>
                                         <th mat-sort-header="created_at">Costo de la cita</th>
                                         <!-- <th ></th> -->
