--- a/src/app/medical/appointment/atencion-medical/atencion-medical.component.html
+++ b/src/app/medical/appointment/atencion-medical/atencion-medical.component.html
@@ -49,7 +49,7 @@
                                 <div class="col-12 col-md-6 col-xl-4">
                                     <div class="form-group local-forms">
                                         <label >N° Documento <span class="login-danger">*</span></label>
-                                        <input class="form-control"  disabled [(ngModel)]="n_document" name="n_document"  type="number"  >
+                                        <input class="form-control"  disabled [(ngModel)]="identification_number" name="identification_number"  type="number"  >
                                     </div>
                                 </div>
 
