--- a/src/app/medical/appointment/edit-appointments/edit-appointments.component.html
+++ b/src/app/medical/appointment/edit-appointments/edit-appointments.component.html
@@ -178,14 +178,14 @@
                                 <div class="col-12 col-md-6 col-xl-4">  
                                     <div class="form-group local-forms">
                                         <label >First Name <span class="login-danger">*</span></label>
-                                        <input class="form-control" disabled [(ngModel)]="name" name="name" type="text"  >
+                                        <input class="form-control" disabled [(ngModel)]="first_name " name="first_name " type="text"  >
                                     </div>
                                 </div>
 
                                 <div class="col-12 col-md-6 col-xl-4">
                                     <div class="form-group local-forms">
                                         <label >Surname <span class="login-danger">*</span></label>
-                                        <input class="form-control" disabled [(ngModel)]="surname" name="surname" type="text"  >
+                                        <input class="form-control" disabled [(ngModel)]="last_name" name="last_name" type="text"  >
                                     </div>
                                 </div>
 
@@ -199,7 +199,7 @@
                                 <div class="col-12 col-md-6 col-xl-4">
                                     <div class="form-group local-forms">
                                         <label >N° Documento <span class="login-danger">*</span></label>
-                                        <input class="form-control" (keyup.enter)="filterPatient()"  disabled [(ngModel)]="n_document" name="n_document"  type="number"  >
+                                        <input class="form-control" (keyup.enter)="filterPatient()"  disabled [(ngModel)]="identification_number" name="identification_number"  type="number"  >
                                     </div>
                                 </div>
 
