--- a/src/app/medical/patient-m/patient-m-profile/patient-m-profile.component.html
+++ b/src/app/medical/patient-m/patient-m-profile/patient-m-profile.component.html
@@ -121,7 +121,7 @@
                                             </li>
                                             <li>
                                                 <h4>N° de documento</h4>
-                                                <span>{{ patient_selected.n_document }}</span>
+                                                <span>{{ patient_selected.identification_number }}</span>
                                             </li>
 
                                             <li>
