--- a/src/app/medical/appointment/add-appointments/add-appointments.component.html
+++ b/src/app/medical/appointment/add-appointments/add-appointments.component.html
@@ -153,21 +153,21 @@
                                 <div class="col-12 col-md-6 col-xl-4">
                                     <div class="form-group local-forms">
                                         <label >N° Documento <span class="login-danger">*</span></label>
-                                        <input class="form-control" (keyup.enter)="filterPatient()"  [(ngModel)]="n_document" name="n_document"  type="number"  >
+                                        <input class="form-control" (keyup.enter)="filterPatient()"  [(ngModel)]="identification_number" name="identification_number"  type="number"  >
                                     </div>
                                 </div>
 
                                 <div class="col-12 col-md-6 col-xl-4">  
                                     <div class="form-group local-forms">
                                         <label >First Name <span class="login-danger">*</span></label>
-                                        <input class="form-control" [(ngModel)]="name" name="name" type="text"  >
+                                        <input class="form-control" [(ngModel)]="first_name" name="name" type="text"  >
                                     </div>
                                 </div>
 
                                 <div class="col-12 col-md-6 col-xl-4">
                                     <div class="form-group local-forms">
                                         <label >Surname <span class="login-danger">*</span></label>
-                                        <input class="form-control" [(ngModel)]="surname" name="surname" type="text"  >
+                                        <input class="form-control" [(ngModel)]="last_name" name="surname" type="text"  >
                                     </div>
                                 </div>
                                 <!-- 
