--- a/src/app/medical/appointment/list-appointments/list-appointments.component.html
+++ b/src/app/medical/appointment/list-appointments/list-appointments.component.html
@@ -78,7 +78,7 @@
                                         <th mat-sort-header="email">Paciente</th>
                                         <th mat-sort-header="mobile">Fecha</th>
                                         <th mat-sort-header="birth_date">Hora</th>
-                                        <th mat-sort-header="n_document">Especialidad</th>
+                                        <th mat-sort-header="">Especialidad</th>
                                         <th mat-sort-header="status">Status</th>
                                         <th mat-sort-header="created_at">Fecha de registro</th>
                                         <th ></th>
