--- a/src/app/medical/patient-m/edit-patient-m/edit-patient-m.component.html
+++ b/src/app/medical/patient-m/edit-patient-m/edit-patient-m.component.html
@@ -8,7 +8,7 @@
           <ul class="breadcrumb">
             <li class="breadcrumb-item"><a href="#">Patients </a></li>
             <li class="breadcrumb-item"><i class="feather icon-chevron-right"></i></li>
-            <li class="breadcrumb-item active">Edit Patient : #{{ patient_id }}</li>
+            <li class="breadcrumb-item active">Editar paciente : #{{ patient_id }}</li>
           </ul>
         </div>
       </div>
