--- a/src/app/medical/patient-m/list-patient-m/list-patient-m.component.html
+++ b/src/app/medical/patient-m/list-patient-m/list-patient-m.component.html
@@ -6,9 +6,9 @@
       <div class="row">
         <div class="col-sm-12">
           <ul class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Patients </a></li>
+            <li class="breadcrumb-item"><a href="#">Pacientes </a></li>
             <li class="breadcrumb-item"><i class="feather icon-chevron-right"></i></li>
-            <li class="breadcrumb-item active">Patient List</li>
+            <li class="breadcrumb-item active">Lista de pacientes</li>
           </ul>
         </div>
       </div>
